--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Kernel Community</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <audio autoplay loop>
+        <source src="ruta/a/tu/musica.mp3" type="audio/mpeg"> <!-- Cambiar a la ruta de tu música -->
+        Tu navegador no soporta el elemento de audio.
+    </audio>
+    <div class="container">
+        <h1>The Kernel Community</h1>
+        <div class="buttons">
+            <button onclick="location.href='https://discord.gg/q7RdACFR2f'">Discord</button>
+            <button onclick="location.href='https://roblox.ls/dashboard/'">Link</button>
+            <button onclick="alert('?')">?</button>
+        </div>
+    </div>
+    <script src="index.js"></script>
+</body>
+</html>
