--- a/index.html
+++ b/index.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Join The Kernel Community.">
     <title>The Kernel Community</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <audio autoplay loop>
-        <source src="audio/MONTAGEM BAILÃO.mp3" type="audio/mpeg"> <!-- Cambiar a la ruta de tu música -->
-        Tu navegador no soporta el elemento de audio.
-    </audio>
-    <div class="container">
+    <header>
         <h1>The Kernel Community</h1>
-        <div class="buttons">
-            <button onclick="location.href='https://discord.gg/q7RdACFR2f'">Discord</button>
-            <button onclick="location.href='https://roblox.ls/dashboard/'">Link</button>
-            <button onclick="alert('?')">?</button>
-        </div>
-    </div>
+    </header>
+    <main class="container" id="main-container">
+        <nav aria-label="Community navigation">
+            <div class="buttons">
+                <a href="https://discord.gg/q7RdACFR2f" class="button" target="_blank" rel="noopener noreferrer">Join our Discord</a>
+                <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Visit Link</a>
+                <button class="button" id="info-button" aria-label="More information">?</button>
+            </div>
+        </nav>
+        <section aria-label="Audio controls">
+            <div class="audio-controls">
+                <button id="audio-toggle" aria-label="Toggle audio playback" disabled>Loading Audio...</button>
+                <audio id="background-audio" loop>
+                    <source src="audio/MONTAGEM BAILÃO.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>© 2025 The Kernel Community. All rights reserved.</p>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
