--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join The Kernel Community.">
+    <meta name="description" content="Join The Kernel Community">
     <title>The Kernel Community</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -22,8 +22,8 @@
         </nav>
         <section aria-label="Audio controls">
             <div class="audio-controls">
-                <button id="audio-toggle" aria-label="Toggle audio playback" disabled>Loading Audio...</button>
-                <audio id="background-audio" loop>
+                <button id="audio-toggle" aria-label="Toggle audio playback" disabled>Play Audio</button>
+                <audio id="background-audio" preload="auto">
                     <source src="audio/MONTAGEM BAILÃO.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
