--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join The Kernel Community">
+    <meta name="description" content="Join The Kernel Community, a vibrant group with Discord and Roblox connections.">
     <title>The Kernel Community</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -15,15 +15,14 @@
     <main class="container" id="main-container">
         <nav aria-label="Community navigation">
             <div class="buttons">
-                <a href="https://discord.gg/q7RdACFR2f" class="button" target="_blank" rel="noopener noreferrer">Join our Discord</a>
-                <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Visit Link</a>
-                <button class="button" id="info-button" aria-label="More information">?</button>
+                <a href="https://discord.gg/vwJcBbXqxz" class="button" target="_blank" rel="noopener noreferrer">Join our Discord</a>
+                <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Visit Roblox Link</a>
             </div>
         </nav>
         <section aria-label="Audio controls">
             <div class="audio-controls">
-                <button id="audio-toggle" aria-label="Toggle audio playback" disabled>Play Audio</button>
-                <audio id="background-audio" preload="auto">
+                <button id="audio-toggle" aria-label="Toggle audio playback">Pause Audio</button>
+                <audio id="background-audio" autoplay loop preload="auto">
                     <source src="audio/MONTAGEM BAILÃO.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
