--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join The Kernel Community, a vibrant group with Discord and Roblox connections.">
+    <meta name="description" content="Join The Kernel Community">
     <title>The Kernel Community</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -16,15 +16,15 @@
         <nav aria-label="Community navigation">
             <div class="buttons">
                 <a href="https://discord.gg/vwJcBbXqxz" class="button" target="_blank" rel="noopener noreferrer">Join our Discord</a>
-                <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Visit Roblox Link</a>
+                <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Visit Link</a>
             </div>
         </nav>
         <section aria-label="Audio controls">
             <div class="audio-controls">
-                <button id="audio-toggle" aria-label="Toggle audio playback">Pause Audio</button>
+                <button id="audio-toggle" aria-label="Toggle audio playback">Play Audio</button>
                 <audio id="background-audio" autoplay loop preload="auto">
                     <source src="audio/MONTAGEM BAILÃO.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
+                    <p>Audio not supported. Please use a compatible browser or check the file.</p>
                 </audio>
             </div>
         </section>
