--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join The Kernel Community, a vibrant group with Discord and Roblox connections.">
+    <meta name="description" content="Join The Kernel Community">
     <title>The Kernel Community</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -16,16 +16,16 @@
         <nav aria-label="Community navigation">
             <div class="buttons">
                 <a href="https://discord.gg/vwJcBbXqxz" class="button" target="_blank" rel="noopener noreferrer">Join our Discord</a>
-                <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Visit Roblox Link</a>
+                <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Visit Link</a>
             </div>
         </nav>
         <section aria-label="Audio status">
             <div class="audio-controls" id="audio-status">
-                <p id="audio-message">Loading audio...</p>
+                <p id="audio-message">Attempting to play audio...</p>
             </div>
-            <audio id="background-audio" autoplay muted loop preload="auto">
-                <source src="audio/MONTAGEM BAILÃO.mp3" type="audio/mpeg">
-                <p>Audio not supported. Please use a compatible browser or check the file.</p>
+            <audio id="background-audio" autoplay loop preload="auto" controls>
+                <source src="audio/bailo.mp3" type="audio/mpeg">
+                <p>Audio not supported or file not found. Please check the file or use a compatible browser.</p>
             </audio>
         </section>
     </main>
