--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </nav>
         <section aria-label="Audio status">
             <div class="audio-controls" id="audio-status">
-                <p id="audio-message">Attempting to play audio...</p>
+                <p id="audio-message">A</p>
             </div>
             <audio id="background-audio" autoplay loop preload="auto" controls>
                 <source src="audio/bailo.mp3" type="audio/mpeg">
-                <p>Audio not supported or file not found. Please check the file or use a compatible browser.</p>
+                <p></p>
             </audio>
         </section>
     </main>
