--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <img src="echidna.jpg" alt="Profile" class="profile-img">
         <h1>The Kernel Community</h1>
-        <button class="btn" onclick="window.location.href='https://discord.gg/vwJcBbXqxz'">Discord</button>
-        <button class="btn" onclick="window.location.href='https://roblox.ls/dashboard/'">Link</button>
+        <div class="audio-player">
+            <audio controls>
+                <source src="MONTAGEM BAILÃO.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div class="buttons">
+            <button class="btn" onclick="window.location.href='https://discord.gg/vwJcBbXqxz'">Discord</button>
+            <button class="btn" onclick="window.location.href='https://roblox.ls/dashboard/'">Link</button>
+        </div>
     </div>
     <footer>
         <p>© 2025 The Kernel Community</p>
