--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
-<!DOCTYPE html><!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Kernel Community</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Kernel Community</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>The Kernel Community</h1>
-        <div class="audio-player">
-            <audio controls>
-                <source src="MONTAGEM BAILÃO.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-        </div>
-        <div class="buttons">
-            <button class="btn" onclick="window.location.href='https://discord.gg/vwJcBbXqxz'">Discord</button>
-            <button class="btn" onclick="window.location.href='https://roblox.ls/dashboard/'">Link</button>
-        </div>
+  <button id="playAudio">Click</button>
+
+  <audio id="backgroundMusic" loop>
+      <source src="MONTAGEM BAILÃO.mp3" type="audio/mp3">
+      Tu navegador no soporta el elemento de audio.
+  </audio>
+
+  <div class="container">
+    <h1 class="main-title">The Kernel Community</h1>
+
+    <div class="profile-container">
+        <a href="https://thisisnotawebsitedotcom.com/" target="_blank">
+            <img src="echidna.jpg" alt="Imagen de perfil" class="profile-img">
+        </a>
     </div>
+
+    <div class="buttons-container">
+      <a href="https://discord.gg/vwJcBbXqxz" class="button" target="_blank">Discord</a>
+      <a href="https://roblox.ls/dashboard/" class="button" target="_blank">Link</a>
+    </div>
+
     <footer>
-        <p>© 2025 The Kernel Community</p>
+      <p>© 2025 The Kernel Community</p>
     </footer>
+  </div>
+
+  <script>
+      document.getElementById('playAudio').addEventListener('click', function () {
+          const audio = document.getElementById('backgroundMusic');
+          audio.play();
+          this.style.opacity = '0';
+          setTimeout(() => {
+              this.style.display = 'none';
+          }, 300);
+      });
+  </script>
 </body>
 </html>
