--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <h1 class="main-title">The Kernel Community</h1>
 
     <div class="profile-container">
-        <a href="https://thisisnotawebsitedotcom.com/" target="_blank">
-            <img src="echidna.jpg" alt="Imagen de perfil" class="profile-img">
-        </a>
+        <!-- Logo removed, background set in CSS -->
     </div>
 
     <div class="buttons-container">
