--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>The Kernel Community</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background: url('echidna.jpg') no-repeat center center fixed; background-size: cover;">
   <button id="playAudio">Click</button>
 
   <audio id="backgroundMusic" loop>
@@ -18,7 +18,7 @@
     <h1 class="main-title">The Kernel Community</h1>
 
     <div class="profile-container">
-        <!-- Logo removed, background set in CSS -->
+        <!-- Profile image removed, background set in body -->
     </div>
 
     <div class="buttons-container">
