--- a/index.html
+++ b/index.html
@@ -3,43 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bienvenido a The Kernel Community - Tu centro para la interacción y diversión.">
+  <meta name="keywords" content="Kernel Community, Discord, Roblox, comunidad,social">
+  <meta name="author" content="The Kernel Community">
+
   <title>The Kernel Community</title>
+
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" as="style">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+
   <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background: url('echidna.jpg') no-repeat center center fixed; background-size: cover;">
-  <button id="playAudio">Click</button>
-
-  <audio id="backgroundMusic" loop>
-      <source src="MONTAGEM BAILÃO.mp3" type="audio/mp3">
-      Tu navegador no soporta el elemento de audio.
-  </audio>
-
-  <div class="container">
+<body style="background: url('echidna.jpg') no-repeat center center fixed; background-size: cover;" aria-live="polite">
+  <main class="container">
     <h1 class="main-title">The Kernel Community</h1>
 
-    <div class="buttons-container">
-      <a href="https://discord.gg/vwJcBbXqxz" class="button" target="_blank">Discord</a>
-      <a href="https://roblox.ls/dashboard/" class="button" target="_blank">Link</a>
-    </div>
+    <section class="buttons-container" aria-label="Enlaces de la comunidad">
+      <a href="https://discord.gg/vwJcBbXqxz" class="button" target="_blank" rel="noopener noreferrer">Discord</a>
+      <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Roblox Link</a>
+    </section>
 
-    <footer>
-      <p>© 2025 The Kernel Community</p>
-    </footer>
-  </div>
+    <audio id="backgroundMusic" loop aria-label="Música de fondo">
+      <source src="MONTAGEM BAILÃO.mp3" type="audio/mpeg">
+      Tu navegador no soporta el elemento de audio.
+    </audio>
 
-  <script>
-      document.getElementById('playAudio').addEventListener('click', function () {
-          const audio = document.getElementById('backgroundMusic');
-          if (audio.paused) {
-              audio.play().catch(error => {
-                  console.log("Error playing audio: ", error);
-              });
-          }
-          this.style.opacity = '0';
-          setTimeout(() => {
-              this.style.display = 'none';
-          }, 300);
-      });
-  </script>
+    <button id="playAudio" aria-label="Reproducir música de fondo">Click to Play Music</button>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 The Kernel Community</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
