--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <audio id="backgroundMusic" loop aria-label="Música de fondo">
-      <source src="MONTAGEM BAILÃO.mp3" type="audio/mpeg">
+      <source src="MONTAGEM BAILÃO.mp3" type="audio/mp3">
       Tu navegador no soporta el elemento de audio.
     </audio>
 
