--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bienvenido a The Kernel Community - Tu centro para la interacción y diversión.">
-  <meta name="keywords" content="Kernel Community, Discord, Roblox, comunidad,social">
+  <meta name="keywords" content="Kernel Community, Discord, Roblox, comunidad">
   <meta name="author" content="The Kernel Community">
 
   <title>The Kernel Community</title>
@@ -25,15 +25,13 @@
       <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Roblox Link</a>
     </section>
 
-    <audio id="backgroundMusic" loop aria-label="Música de fondo">
-      <source src="MONTAGEM BAILÃO.mp3" type="audio/mp3">
-      Tu navegador no soporta el elemento de audio.
-    </audio>
+    <div id="playPrompt" class="play-prompt">Haz clic para iniciar</div>
 
-    </main>
+    <audio id="musicaDeFondo" src="MONTAGEM BAILÃO.mp3" loop aria-label="Música de fondo"></audio>
+  </main>
 
   <footer>
-    <p>&copy; 2025 The Kernel Community</p>
+    <p>© 2025 The Kernel Community</p>
   </footer>
 
   <script src="script.js"></script>
