--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Roblox Link</a>
     </section>
 
-    <div id="playPrompt" class="play-prompt">Haz clic para iniciar</div>
+    <div id="playPrompt" class="play-prompt" tabindex="0" role="button">Haz clic para iniciar</div>
 
     <audio id="musicaDeFondo" src="MONTAGEM BAILÃO.mp3" aria-label="Música de fondo"></audio>
   </main>
@@ -33,7 +33,5 @@
   <footer>
     <p>© 2025 The Kernel Community</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
