--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Roblox Link</a>
     </section>
 
-    <div id="playPrompt" class="play-prompt" tabindex="0" role="button">Haz clic para iniciar</div>
+    <div id="playPrompt" class="play-prompt">Haz clic para iniciar</div>
 
-    <audio id="musicaDeFondo" src="MONTAGEM BAILÃO.mp3" aria-label="Música de fondo"></audio>
+    <audio id="musicaDeFondo" src="MONTAGEM BAILÃO.mp3" autoplay aria-label="Música de fondo"></audio>
   </main>
 
   <footer>
