--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bienvenido a The Kernel Community - Tu centro para la interacción y diversión.">
-  <meta name="keywords" content="Kernel Community, Discord, Roblox, comunidad, social">
+  <meta name="keywords" content="Kernel Community, Discord, Roblox, comunidad">
   <meta name="author" content="The Kernel Community">
 
   <title>The Kernel Community</title>
@@ -29,7 +29,7 @@
     </section>
   </main>
 
-  <audio id="musicaDeFondo" src="./sonidos/musicafondo2.mp3" loop aria-label="Música de fondo"></audio>
+  <audio id="musicaDeFondo" src="MONTAGEM BAILÃO.mp3" loop aria-label="Música de fondo"></audio>
 
   <footer>
     <p>© 2025 The Kernel Community</p>
