--- a/index.html
+++ b/index.html
@@ -19,27 +19,25 @@
       <a href="https://discord.gg/vwJcBbXqxz" class="button" target="_blank" rel="noopener noreferrer">Discord</a>
       <a href="https://roblox.ls/dashboard/" class="button" target="_blank" rel="noopener noreferrer">Roblox Link</a>
     </section>
-    <div id="playPrompt" class="play-prompt" tabindex="0">Haz clic para iniciar</div>
-    <audio id="musicaDeFondo" src="MONTAGEM BAILÃO.mp3" loop></audio>
+    <audio id="musicaDeFondo" src="MONTAGEM BAILÃO.mp3"></audio>
   </main>
   <footer>
     <p>© 2025 The Kernel Community</p>
   </footer>
   <script>
-    // Reproduce la música solo cuando el usuario haga clic en el prompt
-    const playPrompt = document.getElementById('playPrompt');
+    // Reproduce la música al hacer clic o presionar tecla una sola vez
     const musica = document.getElementById('musicaDeFondo');
-    playPrompt.addEventListener('click', () => {
-      musica.play();
-      playPrompt.style.display = 'none';
-    });
-    // Accesibilidad: permite activar con Enter/espacio
-    playPrompt.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        musica.play();
-        playPrompt.style.display = 'none';
+    let musicaIniciada = false;
+    function iniciarMusica() {
+      if (!musicaIniciada) {
+        musica.play().catch(() => {
+          // Si hay error de reproducción, no hacer nada
+        });
+        musicaIniciada = true;
       }
-    });
+    }
+    document.body.addEventListener('click', iniciarMusica);
+    document.body.addEventListener('keydown', iniciarMusica);
   </script>
 </body>
 </html>
